--- a/colab/captcha.ipynb
+++ b/colab/captcha.ipynb
@@ -144,7 +144,7 @@
         "\n",
         "def get_model():\n",
         "    m = Sequential([\n",
-        "      layers.experimental.preprocessing.Rescaling(1./255, name=\"\"),\n",
+        "      layers.experimental.preprocessing.Rescaling(1./255, name=\"rescaling\"),\n",
         "\n",
         "      layers.Conv2D(32, (3, 3), padding=\"same\", input_shape=(IMG_HEIGHT, IMG_WIDTH, 1)),\n",
         "      layers.MaxPooling2D(pool_size=(2, 2), strides=(2, 2)),\n",
